# python-fastapi-openapi-k8s

./: .coverage  .gitignore  Dockerfile  README.md  create_virtual_env.sh  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run-tests.sh  docker-run.sh  docker-tests.sh  injector.py  main.py  pyproject.toml  pytest.sh  service-log.sh  service-start.sh
Search_Engine/: Zinc_Search.ipynb  movies.json  zincsearch-service.sh
Spark/: docker-compose.yml  spark-env.sh  spark-master.sh  spark-worker.sh  sparkSubmit.sh
Spark/utils/: hello-spark.py  spark-args-test.py  spark-es-read.py  spark-es-write.py  task-threads-spark.py
config/: log_config.py
job/: job.py
tests/: conftest.py  test_api.py
